--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,2 +1,10 @@
 RewriteEngine On
+RewriteBase /
+
+# Enforce "zorg.ch" (WITHOUT "www.")
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+
+# Redirect file requests to the getfile.php Script
+# See getfile.php for more information
 RewriteRule ^files/([0-9]+)/(.*) /getfile.php?user=$1&file=$2
