--- a/www/.htaccess
+++ b/www/.htaccess
@@ -34,6 +34,7 @@
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 		RewriteRule user/(.*?[^/])(/.*)?$ /?username=$1 [QSA,NC,NE,L]
+		RewriteRule bug/([0-9]+)(/.*)?$ /?bug=$1 [QSA,NC,L]
 		RewriteRule tpl/([0-9]+)(/.*)?$ /?tpl=$1 [QSA,NC,L]
 		RewriteRule page/([\S]+?[^/])(/.*)?$ /?word=$1 [QSA,NE,NC,L]
 		RewriteRule event/([0-9]{4})(?:/([0-9]{2}))?(?:/([0-9]{2}))?(?:/([\w-]+))? /?event=$4&year=$1&month=$2&day=$3 [QSA,NE,NC,L]
