--- a/www/.htaccess
+++ b/www/.htaccess
@@ -21,29 +21,32 @@
 	#    NC = No case - match case-insensitive
 	#    NE = No escape - prevent special characters to be converted to hexcode
 	#    L = Last Rule (stop)
-	RewriteRule wiki.php / [R=301,QSA,NC,L]
-	RewriteRule smarty.php / [R=301,QSA,NC,L]
-	
+	RewriteRule wiki.php / [R=301,QSA,NC,NE,L]
+	RewriteRule smarty.php / [R=301,QSA,NC,NE,L]
+
 	# Pretty URL for User Profile page
 	# https://wiki.apache.org/httpd/RewriteQueryString#Making_the_Query_String_Part_of_the_Path
 	RewriteCond %{QUERY_STRING} user_id=([0-9]+)
 	RewriteRule profil.php /user/%1? [R,NC,L]
 	
+	RewriteCond %{QUERY_STRING} bug_id=([\d]+)
+	RewriteRule index.php /bug/%1? [R,NC,NE,L]
+
 	# !-f if the file with the specified name in the browser doesn't exist,
 	# !-d or the directory in the browser doesn't exist then proceed to the rewrite rules below
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 		RewriteRule ^user/(.*?[^/])(/.*)?$ /?username=$1 [QSA,NC,NE,L]
 			RewriteRule ^user/?$ /profil.php [R=301,QSA,NC,L]
-		RewriteRule ^bug/([0-9]+)(/.*)?$ /?bug=$1 [QSA,NC,L]
+		RewriteRule ^bug/([\d]+)(/.*)?$ /?bug=$1 [QSA,NC,NE,L]
 			RewriteRule ^bug/?$ /bugtracker.php [R=301,QSA,NC,L]
-		RewriteRule ^tpl/([0-9]+)(/.*)?$ /?tpl=$1 [QSA,NC,L]
+		RewriteRule ^tpl/([0-9]+)(/.*)?$ /?tpl=$1 [QSA,NC,NE,L]
 			RewriteRule ^tpl/?$ /?tpl=23 [QSA,NC,L]
-		RewriteRule ^page/([\S]+?[^/])(/.*)?$ /?word=$1 [QSA,NC,L]
+		RewriteRule ^page/([\S]+?[^/])(/.*)?$ /?word=$1 [QSA,NC,NE,L]
 			RewriteRule ^page/?$ /?tpl=23 [QSA,NC,L]
-		RewriteRule ^event/([0-9]{4})(?:/([0-9]{2}))?(?:/([0-9]{2}))?(?:/([\w-]+))? /?event=$4&year=$1&month=$2&day=$3 [QSA,NE,NC,L]
+		RewriteRule ^event/([0-9]{4})(?:/([0-9]{2}))?(?:/([0-9]{2}))?(?:/([\w-]+))? /?event=$4&year=$1&month=$2&day=$3 [QSA,NC,NE,L]
 			RewriteRule ^event/?$ /?tpl=158 [QSA,NC,L]
 			RewriteRule ^events(/.*)?$ /?tpl=158 [QSA,NC,L]
-		RewriteRule ^thread/([0-9]+)(/.*)?$ /?thread=$1 [QSA,NC,L]
+		RewriteRule ^thread/([0-9]+)(/.*)?$ /?thread=$1 [QSA,NC,NE,L]
 			RewriteRule ^thread/?$ /forum.php [R=301,QSA,NC,L]
 </IfModule>
