Fix various issues with page outputs identified with new zorg Sitemap XML

--- a/www/.htaccess
+++ b/www/.htaccess
@@ -25,12 +25,13 @@
 	RewriteRule smarty.php / [R=301,QSA,NC,NE,L]
 
 	# Pretty URL for User Profile page
-	# https://wiki.apache.org/httpd/RewriteQueryString#Making_the_Query_String_Part_of_the_Path
+	# https://httpd.apache.org/docs/trunk/rewrite/remapping.html#rewrite-query
 	RewriteCond %{QUERY_STRING} user_id=([0-9]+)
-	RewriteRule profil.php /user/%1? [R,NC,L]
-	
+	RewriteRule profil.php /user/%1 [R=301,QSA,NC,L]
+
+	# Pretty URL for Bugtracker Bug pages
 	RewriteCond %{QUERY_STRING} bug_id=([\d]+)
-	RewriteRule index.php /bug/%1? [R,NC,NE,L]
+	RewriteRule bugtracker.php /bug/%1 [R=301,QSA,NC,NE,L]
 
 	# !-f if the file with the specified name in the browser doesn't exist,
 	# !-d or the directory in the browser doesn't exist then proceed to the rewrite rules below
