--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,14 @@
 {
+	"name": "zorgch/zorg-code",
+	"config": {
+		"platform": {
+			"php": "7.4"
+		}
+	},
 	"require": {
 		"sprain/swiss-qr-bill": "^3.2",
-		"ipinfo/ipinfo": "^2.3"
+		"maxmind-db/reader": "^1.0"
 	},
 	"require-dev": {
-		"dg/bypass-finals": "^1.3",
-		"dms/phpunit-arraysubset-asserts": "^0.1",
-		"fpdf/fpdf": "^1.82",
-		"friendsofphp/php-cs-fixer": "^2.19",
-		"phpstan/phpstan": "^0.12.53",
-		"phpunit/phpunit": ">=8.0",
-		"squizlabs/php_codesniffer": "^3.5.8",
-		"symfony/css-selector": "^4.2",
-		"symfony/var-dumper": "^5.1",
-		"tecnickcom/tcpdf": "^6.3.2"
 	}
 }
