Some docker-compose improvements

--- a/Docker/.env.docker
+++ b/Docker/.env.docker
@@ -7,6 +7,7 @@ DOMAINNAME=zorg.local
 APACHE_WEBROOT=/var/www
 PHP_Version=7.4
 MYSQL_VERSION=5.7
+MYSQL_LOCAL_DATABASE_PATH=./Docker/mysql57
 MYSQL_PORT=3306
 MYSQL_DATABASE=zooomclan
 MYSQL_USER=root
