--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -20,10 +20,16 @@ services:
         expose:
             - 80
             - 443
+        healthcheck:
+            test: git --version || exit 1
+            interval: 20s
+            timeout: 2s
+            retries: 10
         volumes:
             - ./Docker/ssl:/etc/apache2/ssl
             - ./Docker/apache2/000-default.conf:/etc/apache2/sites-available/000-default.conf
             - ./Docker/apache2/ssl-default.conf:/etc/apache2/sites-available/default-ssl.conf
+            - ./.git:${APACHE_WEBROOT:?err}/.git
             - ./cron:${APACHE_WEBROOT:?err}/cron
             - ./data:${APACHE_WEBROOT:?err}/data
             - ./irclogs:${APACHE_WEBROOT:?err}/irclogs
@@ -35,16 +41,18 @@ services:
         entrypoint: ["/bin/sh","-c"]
         command:
             - |
-               echo "Mutex posixsem" >> /etc/apache2/apache2.conf
-               a2enmod ssl
-               a2ensite default-ssl
-               curl -sSLf \
+                echo "Mutex posixsem" >> /etc/apache2/apache2.conf
+                a2enmod ssl
+                a2ensite default-ssl
+                a2enmod rewrite
+                curl -sSLf \
                    -o /usr/local/bin/install-php-extensions \
                    https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions && \
-               chmod +x /usr/local/bin/install-php-extensions && \
-               install-php-extensions mysqli pdo_mysql gd xdebug
-               exec /usr/sbin/apache2ctl -D FOREGROUND
-            # Additional install-php-extensions: intl, mbstring, gettext, curl, json, zip, exif
+                chmod +x /usr/local/bin/install-php-extensions && \
+                install-php-extensions mysqli pdo_mysql gd xdebug
+                apt-get -y update && apt-get -y install git
+                exec /usr/sbin/apache2ctl -D FOREGROUND
+               # Additional install-php-extensions: intl, mbstring, gettext, curl, json, zip, exif
 
     db:
         platform: ${OS_PLATFORM}
@@ -55,9 +63,9 @@ services:
         environment:
             - MYSQL_ALLOW_EMPTY_PASSWORD=yes
             - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD:-dbpass}
-            - MYSQL_USER=${MYSQL_USER:-dbuser}
-            - MYSQL_PASSWORD=${MYSQL_PASSWORD:-root}
-            - MYSQL_DATABASE=${MYSQL_DATABASE}
+            - MYSQL_DATABASE=${MYSQL_DATABASE?-zooomclan}
+            #- MYSQL_USER=${MYSQL_USER:-dbuser}
+            #- MYSQL_PASSWORD=${MYSQL_PASSWORD:-root}
             #- MYSQL_ROOT_HOST="%" # in some scenarios this revokes Host IP connection restrictions
         networks:
             - frontend
@@ -71,8 +79,8 @@ services:
             timeout: 3s
             retries: 5
         volumes:
-            - ./Docker/mysql57:/var/lib/mysql
-        command: [mysqld, --default-authentication-plugin=mysql_native_password, --character-set-server=utf8mb4, --collation-server=utf8mb4_unicode_ci, --innodb_monitor_enable=all, --max-connections=1001]
+            - ${MYSQL_LOCAL_DATABASE_PATH:-./Docker/mysql57}:/var/lib/mysql
+        command: [mysqld, --default-authentication-plugin=mysql_native_password, --character-set-server=utf8mb4, --collation-server=utf8mb4_unicode_ci, --innodb_monitor_enable=all, --max-connections=1001, --explicit_defaults_for_timestamp]
 
     db-manager:
         image: phpmyadmin:latest
@@ -91,3 +99,4 @@ services:
             - frontend
         ports:
             - ${PHPMYADMIN_PORT:-8080}:80
+
