Docker tuning: docker-sync support, apache user, Doku

--- a/Docker/.env.docker
+++ b/Docker/.env.docker
@@ -4,6 +4,8 @@ OS_PLATFORM=linux/x86_64
 HTTP_PORT=80
 HTTPS_PORT=443
 DOMAINNAME=zorg.local
+APACHE_USER=www-data
+APACHE_GROUP=www-data
 APACHE_WEBROOT=/var/www
 PHP_Version=7.4
 MYSQL_VERSION=5.7
