--- a/Docker/.env.docker
+++ b/Docker/.env.docker
@@ -8,6 +8,7 @@ APACHE_USER=www-data
 APACHE_GROUP=www-data
 APACHE_WEBROOT=/var/www
 PHP_Version=7.4
+PHP_INI_DIR=/usr/local/etc/php
 MYSQL_VERSION=5.7
 MYSQL_LOCAL_DATABASE_PATH=./Docker/mysql57
 MYSQL_PORT=3306
