New .env + Docker! Copy .env.example to /approot/.env
Plus some minor code fixes hie und da

--- a/Docker/.env.docker
+++ b/Docker/.env.docker
@@ -1,18 +1,18 @@
 # === Docker ===
-COMPOSE_PROJECT_NAME=zorg
-OS_PLATFORM=linux/x86_64
-HTTP_PORT=80
-HTTPS_PORT=443
-DOMAINNAME=zorg.local
-APACHE_USER=www-data
-APACHE_GROUP=www-data
-APACHE_WEBROOT=/var/www
-PHP_Version=7.4
-PHP_INI_DIR=/usr/local/etc/php
-MYSQL_VERSION=5.7
-MYSQL_LOCAL_DATABASE_PATH=./Docker/mysql57
-MYSQL_PORT=3306
-MYSQL_DATABASE=zooomclan
-MYSQL_USER=root
-MYSQL_PASSWORD=
-PHPMYADMIN_PORT=8080
+COMPOSE_PROJECT_NAME="zorg"
+OS_PLATFORM="linux/x86_64"
+HTTP_PORT="80"
+HTTPS_PORT="443"
+DOMAINNAME="zorg.local"
+APACHE_USER="www-data"
+APACHE_GROUP="www-data"
+APACHE_WEBROOT="/var/www"
+PHP_Version="7.4"
+PHP_INI_DIR="/usr/local/etc/php"
+MYSQL_VERSION="5.7"
+MYSQL_LOCAL_DATABASE_PATH="./Docker/mysql57"
+MYSQL_PORT="3306"
+MYSQL_DATABASE="zooomclan"
+MYSQL_USER="root"
+MYSQL_PASSWORD=""
+PHPMYADMIN_PORT="8080"
