Improves dotEnv Variable validations

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # PHP dotENV - https://github.com/vlucas/phpdotenv
 # Copy this file as new /.env & adjust all settings to the corresponging Environment!
 ENVIRONMENT="development" # Use "development" for any non-productive envs
+LOCALE="de_CH" # Required!
+TIMEZONE="Europe/Zurich" # Required!
 
 # Database connection (required):
 MYSQL_HOST="localhost" # Required! Use "localhost" or Docker service hostname
@@ -36,8 +38,6 @@ HOSTNAME=""
 HTTP_PROTOCOL="https" # https or http
 SITE_FQDN="${HTTP_PROTOCOL}://${HOSTNAME}" # No trailing slash
 PAGETITLE_SUFFIX=" - ${HOSTNAME}"
-LOCALE="de_CH"
-TIMEZONE="Europe/Zurich"
 ENCODING="UTF-8"
 EMAILS_FROM="info@${HOSTNAME}"
 ADMIN_EMAIL="root@${HOSTNAME}"
@@ -57,61 +57,61 @@ FACEBOOK_PAGENAME=""
 URLPATH_ACTIONS="/actions/"
 URLPATH_AJAX="${URLPATH_JS}ajax/"
 URLPATH_CSS="/css/"
-URLPATH_HZ_IMAGES="${URLPATH_IMAGES}hz/"
 URLPATH_IMAGES="/images/"
 URLPATH_JS="/js/"
 URLPATH_RSS="${SITE_FQDN}/?layout=rss"
 URLPATH_SCRIPTS="/scripts/"
 URLPATH_USERIMAGES="/data/userimages/"
 URLPATH_UTILS="/util/"
-USERLEVEL_ALLE="0"
-USERLEVEL_USER="1"
-USERLEVEL_MEMBER="2"
-USERLEVEL_ADMIN="3"
-USER_TIMEOUT="200" # In seconds: 3 Minutes
-USER_OLD_AFTER="94608000" # In seconds: 3 Jahre
-USER_USE_CURRENT_LOGIN="TRUE"
-USER_USE_REGISTRATION_CODE="TRUE"
-USER_USE_ONLINE_LIST="TRUE"
-USERIMAGE_ENABLED="TRUE"
+USERLEVEL_ALLE=
+USERLEVEL_USER=
+USERLEVEL_MEMBER=
+USERLEVEL_ADMIN=
+USER_TIMEOUT= # In seconds: 3 Minutes
+USER_OLD_AFTER= # In seconds: 3 Jahre
+USER_USE_CURRENT_LOGIN="true"
+USER_USE_REGISTRATION_CODE="true"
+USER_USE_ONLINE_LIST="true"
+USERIMAGE_ENABLED="true"
 USERIMAGE_EXTENSION=".jpg" # Extension with .-prefix
-USERIMAGE_SIZE_LARGE="500"
-USERIMAGE_SIZE_SMALL="150"
+USERIMAGE_SIZE_LARGE=
+USERIMAGE_SIZE_SMALL=
 USERIMAGE_DEFAULT="none${USERIMAGE_EXTENSION}" # Must be within USERIMAGES_DIR
-ADDLE_MAX_GAMES="1"
-ADDLE_BASE_POINTS="1600"
-ADDLE_MAX_POINTS_TRANSFERABLE="32"
-APOD_GALLERY_ID="41" # Match to gallery_albums-Table `id`
+ADDLE_MAX_GAMES=
+ADDLE_BASE_POINTS=
+ADDLE_MAX_POINTS_TRANSFERABLE=
+APOD_GALLERY_ID= # Match to gallery_albums-Table `id`
 BUGTRACKER_FILTER_DEFAULT="?show[]=open&show[]=notdenied&show[]=assigned&show[]=unassigned"
-CHESS_DWZ_BASE_POINTS="1600"
-CHESS_DWZ_MAX_POINTS_TRANSFERABLE="32"
-FORUM_DEFAULT_MAXDEPTH="10"
-FORUM_THREAD_CLEARCACHE_AFTER="30" # In Tagen
+CHESS_DWZ_BASE_POINTS=
+CHESS_DWZ_MAX_POINTS_TRANSFERABLE=
+FORUM_DEFAULT_MAXDEPTH=
+FORUM_THREAD_CLEARCACHE_AFTER= # In Tagen
 GALLERY_MAX_PIC_SIZE="['width'=>800, 'height'=>800]"
 GALLERY_MAX_THUMBNAIL_SIZE="['width'=>150, 'height'=>150]"
 GALLERY_THUMBPAGE="['width'=>4, 'height'=>3, 'padding'=>10]"
-GO_OFFSET_PIC="250"
-GO_LINKRADIUS="15"
-GO_FIELDSIZE="40"
-GO_LINEWIDTH="2"
-GO_STARDOTWIDTH="10"
-GO_STONEBIGWIDTH="190"
-GO_LASTSTONEWIDTH="10"
+GO_OFFSET_PIC=
+GO_LINKRADIUS=
+GO_FIELDSIZE=
+GO_LINEWIDTH=
+GO_STARDOTWIDTH=
+GO_STONEBIGWIDTH=
+GO_LASTSTONEWIDTH=
+URLPATH_HZ_IMAGES="${URLPATH_IMAGES}hz/"
 HZ_MAPS_EXTENSION=".gif"
-HZ_MAX_GAMES="5"
-HZ_TURN_TIME="259200" # In Sekunden: 3 Tage
-HZ_TURN_COUNT="4"
-HZ_TURN_ADD_MONEY="10"
+HZ_MAX_GAMES=
+HZ_TURN_TIME= # In Sekunden: 3 Tage
+HZ_TURN_COUNT=
+HZ_TURN_ADD_MONEY=
 SETI_TEAM_NAME=""
 SETI_EMAIL=""
 STRING_NOT_FOUND="Reference not found in String list"
 
 # Session settings:
 SESSION_ID="z"
-SESSION_LIFETIME="43200" # In seconds
-ENABLE_COOKIES="TRUE"
+SESSION_LIFETIME= # In seconds
+ENABLE_COOKIES="true"
 COOKIE_DOMAIN=".${HOSTNAME}" # Prefixed .-dot is recommended
-COOKIE_EXPIRATION="604800" # In seconds. Note: seconds to be added to current time()+COOKIE_EXPIRATION!
+COOKIE_EXPIRATION= # In seconds. Note: seconds to be added to current time()+COOKIE_EXPIRATION!
 COOKIE_PATH="/"
 COOKIE_SAMESITE="Lax" # Strict, None, or Lax (default/fallback)
 COOKIE_HTTPONLY="true" # true or false (true is strongly recommended)
@@ -128,7 +128,7 @@ SMARTY_TRUSTED_DIRS="${WWW_ROOT}/scripts/" # (array) with strings
 SMARTY_TEMPLATES_HTML="${VIEWS_DIR}" # (array) with strings
 SMARTY_PACKAGES_DIR="${WWW_ROOT}/packages/"
 SMARTY_PACKAGES_EXTENSION=".php"
-SMARTY_DEFAULT_TPL_ID="23"
+SMARTY_DEFAULT_TPL_ID=
 SMARTY_404PAGE_TPL_FILE="file:layout/pages/404_page.tpl"
 
 # Services, APIs, and API-Keys:
@@ -180,15 +180,15 @@ TWITTER_API_TOKENSECRET=""
 TWITTER_API_CALLBACK_URL=""
 
 # zorg settings:
-VORSTAND_USER="451" # Match to user-Table `id`
-BARBARA_HARRIS="59" # Match to user-Table `id`
-ROSENVERKAEUFER="439" # Match to user-Table `id`
-THE_ARCHITECT="582" # Match to user-Table `id`
-ANFICKER_USER_ID="9999"
+VORSTAND_USER= # Match to user-Table `id`
+BARBARA_HARRIS= # Match to user-Table `id`
+ROSENVERKAEUFER= # Match to user-Table `id`
+THE_ARCHITECT= # Match to user-Table `id`
+ANFICKER_USER_ID=
 ZORG_VEREIN_NAME="zorg Verein"
 ZORG_VEREIN_EMAIL=""
 ZORG_VEREIN_STRASSE=""
-ZORG_VEREIN_PLZ="9000"
+ZORG_VEREIN_PLZ=
 ZORG_VEREIN_ORT="St. Gallen"
 ZORG_VEREIN_LAND="Schweiz"
 ZORG_VEREIN_LAND_ISO2="CH"
