--- a/Docker/.gitignore
+++ b/Docker/.gitignore
@@ -1,2 +1,5 @@
 # Ignore changes within the Docker database volume
-mysql57
+/mysql57
+
+# ...and DON'T ignore the DB template
+!/mysql57/zooomclan-empty
