--- a/Docker/.env.docker
+++ b/Docker/.env.docker
@@ -1,18 +1,21 @@
 # === Docker ===
 COMPOSE_PROJECT_NAME="zorg"
 OS_PLATFORM="linux/x86_64"
-HTTP_PORT="80"
-HTTPS_PORT="443"
+HTTP_PORT=80
+HTTPS_PORT=443
 DOMAINNAME="zorg.local"
 APACHE_USER="www-data"
 APACHE_GROUP="www-data"
 APACHE_WEBROOT="/var/www"
-PHP_Version="7.4"
+PHP_Version=7.4
 PHP_INI_DIR="/usr/local/etc/php"
-MYSQL_VERSION="5.7"
+XDEBUG_PORT=9003
+XDEBUG_MODES="develop,debug,profile"
+XDEBUG_LOGLEVEL=7
+MYSQL_VERSION=5.7
 MYSQL_LOCAL_DATABASE_PATH="./Docker/mysql57"
-MYSQL_PORT="3306"
+MYSQL_PORT=3306
 MYSQL_DATABASE="zooomclan"
 MYSQL_USER="root"
 MYSQL_PASSWORD=""
-PHPMYADMIN_PORT="8080"
+PHPMYADMIN_PORT=8080
