--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -1,7 +1,3 @@
-networks:
-    frontend:
-        driver: bridge
-
 services:
     apache-php:
         platform: ${OS_PLATFORM}
@@ -9,19 +5,30 @@ services:
         container_name: ${COMPOSE_PROJECT_NAME}-web
         restart: unless-stopped
         environment:
-            - APACHE_DOCUMENT_ROOT=${APACHE_WEBROOT:-/var/www}
+            APACHE_DOCUMENT_ROOT: ${APACHE_WEBROOT:-/var/www}
             #- APACHE_RUN_USER=${APACHE_USER:-www-data} # Causes issues with Session-Handling in /tmp
             #- APACHE_RUN_GROUP=${APACHE_GROUP:-www-data} # And causes issues with reading from ../.git
+            XDEBUG_CONFIG: >
+                mode=${XDEBUG_MODES:-develop,debug}
+                idekey=docker
+                client_port=${XDEBUG_PORT:-9003}
+                client_host=host.docker.internal
+                discover_client_host=true
+                start_with_request=yes
+                trigger_value=StartProfileForMe
+                log=/dev/stdout
+                log_level=${XDEBUG_LOGLEVEL:-0}
         hostname: webserver
         domainname: ${DOMAINNAME}
-        networks:
-            - frontend
+        extra_hosts:
+            - host.docker.internal:host-gateway
         ports:
             - ${HTTP_PORT:-80}:80
             - ${HTTPS_PORT:-443}:443
         expose:
-            - 80
-            - 443
+            - ${HTTP_PORT:-80}
+            - ${HTTPS_PORT:-443}
+            #- ${XDEBUG_PORT:-9003} # XDebug
         healthcheck:
             test: git --version || exit 1
             interval: 20s
@@ -34,17 +41,14 @@ services:
             - ./Docker/sendmail/msmtprc:/etc/apache2/sites-available/default-ssl.conf
             - ./.env:${APACHE_WEBROOT:?err}/.env
             - ./.git:${APACHE_WEBROOT:?err}/.git
-            #- web-root-git-sync:${APACHE_WEBROOT:?err}/.git:nocopy
             - ./cron:${APACHE_WEBROOT:?err}/cron
             - ./data:${APACHE_WEBROOT:?err}/data
-            #- web-root-data-sync:${APACHE_WEBROOT:?err}/data:nocopy Issue with modified Files not being synced
             - ./irclogs:${APACHE_WEBROOT:?err}/irclogs
             - ./keys:${APACHE_WEBROOT:?err}/keys
             - ./migration:${APACHE_WEBROOT:?err}/migration
             - ./scripts:${APACHE_WEBROOT:?err}/scripts
-            - web-root-vendor-sync:${APACHE_WEBROOT:?err}/vendor:nocopy
+            - ./vendor:${APACHE_WEBROOT:?err}/vendor
             - ./www:${APACHE_WEBROOT:?err}/html
-            #- web-root-www-sync:${APACHE_WEBROOT:?err}/html:nocopy Issue with modified Files not being synced
         entrypoint: ["/bin/sh","-c"]
         command:
             - |
@@ -58,6 +62,7 @@ services:
                 chmod +x /usr/local/bin/install-php-extensions && \
                 install-php-extensions mysqli pdo_mysql xdebug gd exif
                 apt-get -y update && apt-get -y install git msmtp mailutils
+                git config --global safe.directory '*'
                 grep -Fx -q 'Mutex posixsem' /etc/apache2/apache2.conf || echo 'Mutex posixsem' >> /etc/apache2/apache2.conf
                 exec /usr/sbin/apache2ctl -D FOREGROUND
                # Additional install-php-extensions: intl, mbstring, gettext, curl, json, zip, exif
@@ -75,8 +80,6 @@ services:
             #- MYSQL_USER=${MYSQL_USER-dbuser}
             #- MYSQL_PASSWORD=${MYSQL_PASSWORD-root}
             #- MYSQL_ROOT_HOST="%" # in some scenarios this revokes Host IP connection restrictions
-        networks:
-            - frontend
         ports:
             - ${MYSQL_PORT:-3306}:3306
         expose:
@@ -87,7 +90,7 @@ services:
             timeout: 3s
             retries: 5
         volumes:
-            - db-mysql-sync:/var/lib/mysql:nocopy
+            - ./Docker/mysql57:/var/lib/mysql
         command: [mysqld, --default-authentication-plugin=mysql_native_password, --character-set-server=utf8mb4, --collation-server=utf8mb4_unicode_ci, --innodb_monitor_enable=all, --max-connections=1001, --explicit_defaults_for_timestamp]
 
     db-manager:
@@ -103,19 +106,5 @@ services:
             #- PMA_HOST=db
             #- MYSQL_USER={MYSQL_USER-root} # phpMyAdmin connects using the MySQL credentials env
             #- MYSQL_PASSWORD=${MYSQL_PASSWORD-root} # phpMyAdmin connects using the MySQL credentials env
-        networks:
-            - frontend
         ports:
             - ${PHPMYADMIN_PORT:-8080}:80
-
-volumes:
-    #web-root-git-sync:
-        #external: true
-    #web-root-data-sync:
-        #external: true
-    #web-root-www-sync:
-        #external: true
-    web-root-vendor-sync:
-        external: true
-    db-mysql-sync:
-        external: true
