Updates .env.example & adds empty /data structure

--- a/.env.example
+++ b/.env.example
@@ -77,31 +77,32 @@ USERIMAGE_EXTENSION=".jpg" # Extension with .-prefix
 USERIMAGE_SIZE_LARGE=
 USERIMAGE_SIZE_SMALL=
 USERIMAGE_DEFAULT="none${USERIMAGE_EXTENSION}" # Must be within USERIMAGES_DIR
-ADDLE_MAX_GAMES=
-ADDLE_BASE_POINTS=
-ADDLE_MAX_POINTS_TRANSFERABLE=
-APOD_GALLERY_ID= # Match to gallery_albums-Table `id`
+ADDLE_MAX_GAMES=1
+ADDLE_BASE_POINTS=1600
+ADDLE_MAX_POINTS_TRANSFERABLE=32
 BUGTRACKER_FILTER_DEFAULT="?show[]=open&show[]=notdenied&show[]=assigned&show[]=unassigned"
-CHESS_DWZ_BASE_POINTS=
-CHESS_DWZ_MAX_POINTS_TRANSFERABLE=
-FORUM_DEFAULT_MAXDEPTH=
-FORUM_THREAD_CLEARCACHE_AFTER= # In Tagen
-GALLERY_MAX_PIC_SIZE="['width'=>800, 'height'=>800]"
-GALLERY_MAX_THUMBNAIL_SIZE="['width'=>150, 'height'=>150]"
-GALLERY_THUMBPAGE="['width'=>4, 'height'=>3, 'padding'=>10]"
-GO_OFFSET_PIC=
-GO_LINKRADIUS=
-GO_FIELDSIZE=
-GO_LINEWIDTH=
-GO_STARDOTWIDTH=
-GO_STONEBIGWIDTH=
-GO_LASTSTONEWIDTH=
+CHESS_DWZ_BASE_POINTS=1600
+CHESS_DWZ_MAX_POINTS_TRANSFERABLE=32
+FORUM_DEFAULT_MAXDEPTH=10
+FORUM_THREAD_CLEARCACHE_AFTER=30 # In Tagen
+GALLERY_MAX_PIC_WIDTH=800 # In Pixel
+GALLERY_MAX_PIC_HEIGHT=600 # In Pixel
+GALLERY_MAX_THUMB_WIDTH=150 # In Pixel
+GALLERY_MAX_THUMB_HEIGHT=150 # In Pixel
+APOD_GALLERY_ID= # Match to gallery_albums-Table `id`
+GO_OFFSET_PIC=250 # In Pixel
+GO_LINKRADIUS=15 # In Pixel
+GO_FIELDSIZE=40 # In Pixel
+GO_LINEWIDTH=2 # In Pixel
+GO_STARDOTWIDTH=10 # In Pixel
+GO_STONEBIGWIDTH=190 # In Pixel
+GO_LASTSTONEWIDTH=10 # In Pixel
 URLPATH_HZ_IMAGES="${URLPATH_IMAGES}hz/"
 HZ_MAPS_EXTENSION=".gif"
-HZ_MAX_GAMES=
-HZ_TURN_TIME= # In Sekunden: 3 Tage
-HZ_TURN_COUNT=
-HZ_TURN_ADD_MONEY=
+HZ_MAX_GAMES=5
+HZ_TURN_TIME=259200 # In Sekunden: 3 Tage
+HZ_TURN_COUNT=4
+HZ_TURN_ADD_MONEY=10
 SETI_TEAM_NAME=""
 SETI_EMAIL=""
 STRING_NOT_FOUND="Reference not found in String list"
@@ -124,8 +125,8 @@ COOKIE_USERPW="autologin_pw"
 SMARTY_CACHE="${APP_ROOT}/data/smartylib/cache/"
 SMARTY_COMPILE="${APP_ROOT}/data/smartylib/templates_c/"
 SMARTY_DIR="${WWW_ROOT}/smartylib/"
-SMARTY_TRUSTED_DIRS="${WWW_ROOT}/scripts/" # (array) with strings
-SMARTY_TEMPLATES_HTML="${VIEWS_DIR}" # (array) with strings
+SMARTY_TRUSTED_DIRS="${WWW_ROOT}/scripts/" # Comma-separated list of paths
+SMARTY_TEMPLATES_HTML="${VIEWS_DIR}" # Comma-separated list of paths
 SMARTY_PACKAGES_DIR="${WWW_ROOT}/packages/"
 SMARTY_PACKAGES_EXTENSION=".php"
 SMARTY_DEFAULT_TPL_ID=
@@ -166,12 +167,12 @@ TELEGRAM_BOT="" # as registered with @BotFather
 TELEGRAM_BOT_API_KEY="" # as provided by @BotFather
 TELEGRAM_BOT_API="https://api.telegram.org/bot${TELEGRAM_BOT_API_KEY}/"
 TELEGRAM_BOT_API_AUTH_PASSWORD="" # (string) A secret password required to authorise access to the webhook
-TELEGRAM_BOT_API_IPWHITELIST="[]" # (array) When using `validate_request`, like: [ '1.2.3.4', '1.1.1.1-2.2.2.2']
-TELEGRAM_BOT_API_USERWHITELIST="[]" # (array) An array of Telegram UserIDs that have admin access to your bot (must be integers)
-TELEGRAM_BOT_API_SSLCERT_PATH="" # (string) Path to a self-signed certificate (if necessary), like: "/server.crt"
+TELEGRAM_BOT_API_IPWHITELIST="" # (comma separated list) When using `validate_request`, like: 1.2.3.4,1.1.1.1-2.2.2.2
+TELEGRAM_BOT_API_USERWHITELIST="" # (comma separated list) A list of Telegram UserIDs that have admin access to your bot
+TELEGRAM_BOT_API_SSLCERT_PATH="" # (string) Path to a self-signed certificate (if necessary), like: /server.crt
 TELEGRAM_BOT_API_CHAT="" # (integer) Chat-ID where the Telegram Bot will post to
-TELEGRAM_BOT_API_FILES_DIR="" # (array) List of configurable paths.
-TELEGRAM_BOT_API_LOG_DIR="${ERRORLOG_DIR}" # (array) Paths where the log files should be put.
+TELEGRAM_BOT_API_FILES_DIR="" # Comma-separated list of paths.
+TELEGRAM_BOT_API_LOG_DIR="${ERRORLOG_DIR}" # (string) Path to where the log files should be put.
 # - Twitter API
 TWITTER_API_KEY=""
 TWITTER_API_SECRET=""
