Adds a central zorgDebugger Class for local Coding

--- a/.env.example
+++ b/.env.example
@@ -199,3 +199,6 @@ ZORG_VEREIN_KONTO_IBAN="CH7500781622431172000"
 ZORG_VEREIN_KONTO_IBAN_QRBILL="CH9730781622431172000"
 ZORG_VEREIN_KONTO_CURRENCY="CHF"
 ZORG_VEREIN_KONTO_BESRID=""
+
+# Local Development and Debugging settings:
+DEBUG_SCOPE="" # (Optional) A File or Function name to debug
