Fixes /data/ directory access in Docker service

--- a/Docker/apache2/ssl-default.conf
+++ b/Docker/apache2/ssl-default.conf
@@ -147,16 +147,16 @@
 		ErrorDocument 500 /error/error_static.html
 
 		# User Files aus /data/files/*
-		Alias "/files" "/var/data/files"
-		<Directory "/var/data/files">
+		Alias "/files" "/var/www/data/files"
+		<Directory "/var/www/data/files">
 			Options -Indexes +MultiViews
 			Require all granted
 		</Directory>
 		AliasMatch "^/files/([0-9]+)/(.*)$" "/getfile.php?user=$1&file=$2"
 
 		# Userpics aus /data/userimages/*
-		Alias "/data/userimages" "/var/data/userimages"
-		<Directory "/var/data/userimages">
+		Alias "/data/userimages" "/var/www/data/userimages"
+		<Directory "/var/www/data/userimages">
 			Options -Indexes +MultiViews
 			Require all granted
 		</Directory>
@@ -169,8 +169,8 @@
 		</IfModule>
 
 		# Tauschbörse Artikelbilder aus /data/tauschboerse/*
-		Alias "/images/tauschboerse" "/var/data/tauschboerse"
-		<Directory "/var/data/tauschboerse">
+		Alias "/images/tauschboerse" "/var/www/data/tauschboerse"
+		<Directory "/var/www/data/tauschboerse">
 			Options -Indexes +MultiViews
 			Require all granted
 		</Directory>
