Fixes docker ENV var for PHP_VERSION

--- a/Docker/.env.docker
+++ b/Docker/.env.docker
@@ -7,7 +7,7 @@ DOMAINNAME="zorg.local"
 APACHE_USER="www-data"
 APACHE_GROUP="www-data"
 APACHE_WEBROOT="/var/www"
-PHP_Version=7.4
+PHP_VERSION=7.4
 PHP_INI_DIR="/usr/local/etc/php"
 XDEBUG_PORT=9003
 XDEBUG_MODES="develop,debug,profile"
