Fixed Smarty php-includes using wrong path+files

--- a/.env.example
+++ b/.env.example
@@ -129,7 +129,7 @@ SMARTY_DIR="${APP_FILES}/smartylib/"
 SMARTY_TEMPLATES_HTML="${VIEWS_DIR}" # Comma-separated list of paths
 SMARTY_PACKAGES_DIR="${APP_FILES}/packages/"
 SMARTY_PACKAGES_EXTENSION=".php"
-SMARTY_TRUSTED_DIRS="${WWW_FILES}/actions/,${WWW_FILES}/scripts/" # Comma-separated list of paths
+SMARTY_TRUSTED_DIRS="${WWW_FILES}/scripts/" # Comma-separated list of paths, loaded in given order
 SMARTY_DEFAULT_TPL_ID=
 SMARTY_404PAGE_TPL_FILE="file:layout/pages/404_page.tpl"
 
