--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,9 @@
+# Custom Error Pages
+ErrorDocument 401 /error_static.html
+ErrorDocument 403 /error_notfound.php
+ErrorDocument 404 /error_notfound.php
+ErrorDocument 500 /error_static.html
+
 <ifModule mod_rewrite.c>
 	# Rewrite Flags - https://httpd.apache.org/docs/2.4/rewrite/flags.html
 	#    R=301 = Redirect with HTTP Code
