Fixes PHP Warnings and code hardenings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,14 +6,13 @@
 			"type": "php",
 			"request": "launch",
 			"log": true,
-			"port": 9003,
+			"port": 9004,
 			"hostname": "localhost",
 			"pathMappings": {
-				"/var/www": "${workspaceFolder}",
-				"/var/www/html": "${workspaceFolder}/www",
-				"/var/www/migration": "${workspaceFolder}/migration",
-				"/var/www/scripts": "${workspaceFolder}/scripts",
-				"/var/www/vendor": "${workspaceFolder}/vendor",
+				//"/var/www/html": "${workspaceFolder}",
+				"/var/www/html/app": "${workspaceFolder}/app",
+				"/var/www/html/public": "${workspaceFolder}/public",
+				"/var/www/html/vendor": "${workspaceFolder}/vendor",
 			},
 			"xdebugSettings": {
 				"max_children": 256,
