Refactors setting & using SITE_HOSTNAME, SITE_URL
Helps preventing potential duplicate HTTP-requests, particularly when behind a WAF / Reverse Proxy setup

--- a/.env.example
+++ b/.env.example
@@ -35,9 +35,7 @@ HZ_MAPS_IMAGES_DIR="${IMAGES_DIR}hz/"
 QRCODEIMAGES_DIR="${IMAGES_DIR}/swissqrbill"
 
 # Application settings:
-HOSTNAME=""
-HTTP_PROTOCOL="https" # https or http
-SITE_FQDN="${HTTP_PROTOCOL}://${HOSTNAME}" # No trailing slash
+HOSTNAME="domain.local"
 PAGETITLE_SUFFIX=" - ${HOSTNAME}"
 ENCODING="UTF-8"
 EMAILS_FROM="info@${HOSTNAME}"
@@ -56,11 +54,11 @@ TWITTER_NAME="" # Without prefixed @-char
 FACEBOOK_APPID=""
 FACEBOOK_PAGENAME=""
 URLPATH_ACTIONS="/actions/"
-URLPATH_AJAX="${URLPATH_JS}ajax/"
 URLPATH_CSS="/css/"
 URLPATH_IMAGES="/images/"
 URLPATH_JS="/js/"
-URLPATH_RSS="${SITE_FQDN}/?layout=rss"
+URLPATH_AJAX="${URLPATH_JS}ajax/"
+URLPATH_RSS="/?layout=rss"
 URLPATH_SCRIPTS="/scripts/"
 URLPATH_USERIMAGES="/data/userimages/"
 URLPATH_UTILS="/util/"
@@ -117,7 +115,6 @@ COOKIE_EXPIRATION= # In seconds. Note: seconds to be added to current time()+COO
 COOKIE_PATH="/"
 COOKIE_SAMESITE="Lax" # Strict, None, or Lax (default/fallback)
 COOKIE_HTTPONLY="true" # true or false (true is strongly recommended)
-COOKIE_SECURE="" # Use true=https, false=http (corresponding to HTTP_PROTOCOL)
 COOKIE_SESSION="${SESSION_ID}"
 COOKIE_USERID="autologin_id"
 COOKIE_USERPW="autologin_pw"
