Resolves Bug 406 : adds Bugs filtering by Category

--- a/.env.example
+++ b/.env.example
@@ -79,7 +79,7 @@ USERIMAGE_DEFAULT="none${USERIMAGE_EXTENSION}" # Must be within USERIMAGES_DIR
 ADDLE_MAX_GAMES=1
 ADDLE_BASE_POINTS=1600
 ADDLE_MAX_POINTS_TRANSFERABLE=32
-BUGTRACKER_FILTER_DEFAULT="?show[]=open&show[]=notdenied&show[]=assigned&show[]=unassigned"
+BUGTRACKER_FILTER_DEFAULT="show[]=open&show[]=notdenied&show[]=assigned&show[]=unassigned"
 CHESS_DWZ_BASE_POINTS=1600
 CHESS_DWZ_MAX_POINTS_TRANSFERABLE=32
 FORUM_DEFAULT_MAXDEPTH=10
