Uploads: Allows setting file upload related paths
`TAUSCHARTIKEL_UPLOAD_DIR` and `USERIMAGES_UPLOAD_DIR` (see .env.example)

--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,10 @@ GALLERY_DIR="${DATA_FILES}/gallery/"
 GALLERY_UPLOAD_DIR="${DATA_UPLOAD_DIR}new-galleries/"
 HZ_MAPS_DIR="${DATA_FILES}/hz_maps"
 TAUSCHARTIKEL_IMGAGES_DIR="${DATA_FILES}/tauschboerse/"
+TAUSCHARTIKEL_UPLOAD_DIR="${TAUSCHARTIKEL_IMGAGES_DIR}/upload/"
 USERIMAGES_DIR="${DATA_FILES}/userimages/"
 USERIMAGES_ARCHIVE_DIR="${USERIMAGES_DIR}archiv/"
+USERIMAGES_UPLOAD_DIR="${USERIMAGES_DIR}/upload/"
 CONTROLLERS_DIR="${APP_FILES}/controller/"
 MODELS_DIR="${APP_FILES}/models/"
 VIEWS_DIR="${APP_FILES}/templates/" # TODO change to /views
